css/style.css
/* ... */
.btn {
    margin-right: 15px;
}

/*.btn-default:active, .btn-default:hover  {
    background: transparent;
}*/
.btn-lg,
.btn-group-lg > .btn {
    padding: 10px 30px;
    font-size: 1.45rem;
    border-radius: 30px;
}

.btn-md,
.btn-group-md > .btn {
    padding: 8px 20px;
    font-size: 1.2rem;
    border-radius: 30px;
}

.btn-primary.btnxs:hover {
    background: #eec400;
}

.btn-default.btnxs:hover {
    background: transparent;
}

.btn-primary {
    color: #fff;
}

.btn-primary:active,
.btn-primary:hover {
    background: #fff;
}

.btnxs {
    /*display: inline-block;*/
    position: relative;
    opacity: .999;
    background-color: transparent;
    overflow: hidden;
}

.btnxs:before,
.btnxs:after {
    content: '';
    width: 0;
    height: 100%;
    opacity: 0;
    position: absolute;
    top: 0;
    z-index: -1;
    -webkit-transition: all 0.4s;
    -o-transition: all 0.4s;
    -moz-transition: all 0.4s;
    transition: all 0.4s;
}

.btnxs:before {
    left: 50%;
}

.btnxs:after {
    right: 50%;
}

.btnxs:hover:before,
.btnxs:hover:after {
    width: 50%;
    opacity: 1;
}

.btn-default {
    color: #ed145b;
    border: 1px solid #ed145b;
    background-color: transparent;
    margin-top: 15px;
}

.btn-default:before,
.btn-default:after {
    background-color: #ed145b;
}

.btn-default:focus {
    background-color: #fff;
    border-color: transparent;
}

.btn-default:hover {
    border-color: #fff;
    color: #fff;
    background-color: #fff;
}

.btn-primary {
    color: #ed145b;
    border: 1px solid #ed145b;
    background-color: transparent;
}

.btn-primary:before,
.btn-primary:after {
    background-color: #ed145b;
}

.btn-primary:focus {
    background-color: #ed145b;
    border-color: transparent;
}

.btn-primary:hover {
    border-color: #ed145b;
    color: #ed145b;
}

/*
Extra height css
*/
.margin-top-20 {
    margin-top: 20px;
}

.margin-bottom-20 {
    margin-bottom: 20px;
}

.margin-top-40 {
    margin-top: 40px;
}

.margin-bottom-40 {
    margin-bottom: 40px;
}

.margin-top-60 {
    margin-top: 60px;
}

.margin-bottom-60 {
    margin-bottom: 30px;
}

.padding-top-20 {
    padding-top: 1.33rem;
}

.padding-bottom-20 {
    padding-bottom: 1.33rem;
}

.padding-top-40 {
    padding-top: 2.66rem;
}

.padding-bottom-40 {
    padding-bottom: 2.66rem;
}

.padding-top-60 {
    padding-top: 5rem;
}

.padding-bottom-60 {
    padding-bottom: 5rem;
}

.padding-bottom-0 {
    padding-bottom: 0;
}

/*padding*/
.padding-twenty {
    padding: 10px 0;
}

.padding-fourty {
    padding: 20px 0;
}

.padding-sixty {
    padding: 30px 0;
}

.padding-eighty {
    padding: 40px 0;
}

h1 span {
    color: #eec400;
    font-weight: bold;
}

/* ======================
MENU
======================*/
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:focus,
.navbar-default .navbar-nav > .active > a:hover {
    background-color: #fff;
}

.transp-nav {
    background: transparent;
}

.navbar-brand {
    height: 70px;
    padding: 10px 15px;
    margin-left: 0 !important;
}

.navbar-brand img {
    max-height: 55px;
    -webkit-backface-visibility: hidden;
    -moz-backface-visibility: hidden;
    backface-visibility: hidden;
}

.nav .btn {
    height: 41px;
    font-size: inherit;
    line-height: 10px;
    margin-top: 3px;
}

.nav .btn-primary {
    color: #fff !important;
}

.nav .btn-primary:hover {
    color: #eec400 !important;
}

.navbar-default .btn-default {
    border: 1px solid #000;
}

.navbar-default .btn-default:hover {
    border: 1px solid #eec400;
}

/*fixed nav light*/
.navbar {
    background: #fff;
    border-color: rgba(197, 197, 197, 0.4);
    margin-bottom: 0;
}

.navbar.fixed-nav .navbar-nav > li > a {
    color: #ed145b;
    font-weight: bold;
}

.fixed-nav.navbar .navbar-nav > .active > a,
.fixed-nav.navbar .navbar-nav > .active > a:hover,
.fixed-nav.navbar .navbar-nav > .active > a:focus,
.fixed-nav.navbar .navbar-nav > li > a:hover,
.fixed-nav.navbar .navbar-nav > li > a:focus {
    color: #ed145b;
}

.navbar-nav {
    padding-top: 10px;
}

.fixed-nav .navbar-toggle {
    margin-bottom: 12px;
    margin-top: 13px;
}

/*fixed nav dark*/
.fixed-nav-dark.navbar {
    background: #fcfcfc;
    border-color: #cecece;
}

.navbar.fixed-nav-dark .navbar-nav > li > a {
    color: #444;
    font-weight: 400;
}

.fixed-nav-dark.navbar .navbar-nav > .active > a,
.fixed-nav-dark.navbar .navbar-nav > .active > a:hover,
.fixed-nav-dark.navbar .navbar-nav > .active > a:focus,
.fixed-nav-dark.navbar .navbar-nav > li > a:hover,
.fixed-nav-dark.navbar .navbar-nav > li > a:focus {
    color: #ed145b;
}

.fixed-nav-dark .navbar-nav {
    padding-top: 10px;
}

.fixed-nav-dark .navbar-toggle {
    margin-bottom: 12px;
    margin-top: 13px;
}

/*.navbar-nav li i{
    width: 30px;
    background-color: #EDEDED;
    height: 30px;
    line-height: 30px;
    text-align: center;
    border-radius: 50%;
    margin-top: -10px;
}*/
/* ======================
Home section
======================*/
.home-wrap {
    width: 100%;
    overflow: hidden;
}

.home-msg {
    background: url(../images/home-msg.jpg) no-repeat center top fixed;
    -moz-background-size: 2000px 1105px;
    -webkit-background-size: 2000px 1105px;
    -o-background-size: 2000px 1105px;
    background-size: 2000px 1105px;
}

.home-intro-left {
    margin: auto;
    padding-top: 150px;
}

.home-intro-left .intro-wrap h1 {
    color: #fff;
    font-size: 100px;
    font-weight: 100;
    margin-bottom: 15px;
    text-transform: none;
    line-height: 90%;
    letter-spacing: 4px
}

@media (max-width: 770px) {
    .home-intro-left .intro-wrap h1 {
        font-size: 30px;
    }

    .navbar-brand .top-logo {

    }
}

.home-intro-left .intro-wrap h4 {
    color: #fff;
    margin-top: 0;
    font-weight: 100;
    font-size: 40px;
    letter-spacing: 4px;
}

h4 .spanxxx {
    color: #fff;
    background-color: #ed145b;
    padding: 10px;
    opacity: 1;
}
/* ... */

